# crypt4ghfs-rust

./: .gitignore  Cargo.toml  README.md  app.yaml  justfile  rustfmt.toml
.github/workflows/: main.yml
src/: checksum.rs  cli.rs  config.rs  directory.rs  egafile.rs  encrypted_file.rs  error.rs  file_admin.rs  filesystem.rs  inbox.rs  lib.rs  main.rs  regular_file.rs  utils.rs
src/fuse/: filesystem.rs  libc_extras.rs  libc_wrappers.rs  mod.rs
tests/: blackbox_tests.rs  test_common.rs
tests/configs/: fs.conf
tests/decrypted/: file.txt
tests/keys/: testkey.pub  testkey.sec
tests/rootdir/: file.txt.c4gh
