[package]
name = "crypt4ghfs"
version = "0.2.0"
authors = ["Roberto <roberto.ariosa@crg.eu>"]
edition = "2018"
license = "Apache-2.0"
description = ""
repository = "https://github.com/EGA-archive/crypt4ghfs-rust"
documentation = "https://docs.rs/crypt4ghfs"
keywords = ["crypt4gh", "genetics", "filesystem", "encryption", "c4gh"]
categories = ["filesystem", "cryptography", "encoding"]
readme = "README.md"

[lib]
name = "crypt4ghfs"
path = "src/lib.rs"

[[bin]]
name = "crypt4ghfs"
path = "src/main.rs"

[dependencies]
# Default
fuser = "0.7.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0" # Blocked by crypt4gh
thiserror = "1.0"
toml = "0.5.8"
itertools = "0.10.0"
rpassword = "5.0.1"
crypt4gh = "0.2.0"
nix = "0.21.0"

# Logger
pretty_env_logger = "0.4.0"
log = "0.4.14"
syslog = "5.0.0"

# Decrypting
sodiumoxide = "0.2.6"

[profile.release]
lto = true