[package]
name = "crypt4ghfs"
version = "0.3.0"
authors = ["Roberto <roberto.ariosa@crg.eu>"]
edition = "2021"
license = "Apache-2.0"
description = "Fuse layer exposing Crypt4GH-encrypted files, as if they were decrypted"
repository = "https://github.com/EGA-archive/crypt4ghfs-rust"
documentation = "https://docs.rs/crypt4ghfs"
keywords = ["crypt4gh", "genetics", "filesystem", "encryption", "c4gh"]
categories = ["filesystem", "cryptography", "encoding"]
readme = "README.md"

[lib]
name = "crypt4ghfs"
path = "src/lib.rs"

[[bin]]
name = "crypt4ghfs"
path = "src/main.rs"

[dependencies]
# Default
fuser = "0.11"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
itertools = "0.10"
rpassword = "6.0"
crypt4gh = "0.4"
nix = "0.23"

# Logger
pretty_env_logger = "0.4"
log = "0.4"
syslog = "6.0"

# Decrypting
sodiumoxide = "0.2"

[profile.release]
lto = true